--- a/po/wesnoth-l/zh_TW.po
+++ b/po/wesnoth-l/zh_TW.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:09 UTC\n"
-"PO-Revision-Date: 2019-03-12 12:31+0800\n"
+"PO-Revision-Date: 2019-03-28 20:12+0800\n"
 "Last-Translator: 楊綮銘 <steven2880@gmail.com>\n"
 "Language-Team: Wesnoth Traditional Chinese Team\n"
 "Language: zh_TW\n"
@@ -70,10 +70,8 @@ msgstr ""
 
 #. [campaign]: id=Liberty
 #: data/campaigns/Liberty/_main.cfg:28
-#, fuzzy
-#| msgid "(Intermediate level, 8 scenarios.)"
 msgid "(Novice level, 8 scenarios.)"
-msgstr "（普通難度，8個章節。）"
+msgstr "（普通等級，8個章節。）"
 
 #. [about]
 #: data/campaigns/Liberty/_main.cfg:31
@@ -103,24 +101,18 @@ msgstr "奇襲"
 #. [label]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:17
 msgid "Dallben"
-msgstr "島本"
+msgstr "達爾本"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:22
-#, fuzzy
-#| msgid ""
-#| "In the Era of Turmoil, during the reign of King Garard II, the border "
-#| "towns of Delwyn and Dallben in the province of Annuvin grew increasingly "
-#| "dissatisfied with the King’s rule. Being preoccupied with the great wars, "
-#| "the King was unable to send adequate forces to protect the frontier."
 msgid ""
 "In the Era of Turmoil, during the reign of King Garard II, the border towns "
 "of Delwyn and Dallben in the Province of Annuvin grew increasingly "
 "dissatisfied with the King’s rule. Being preoccupied with the great wars, "
 "the King was unable to send adequate forces to protect the frontier."
 msgstr ""
-"在混亂時代，嘉拉德二世統治時期，阿寧芬省的邊際城鎮姪——戴爾因和島本對於國王的"
-"統治越來越不滿意。由於全力進行一場大戰，國王無法派遣足夠的軍隊來保護邊境。"
+"在混亂時代，嘉拉德二世統治時期，安紐芬省的邊際城鎮姪——戴爾文和達爾本對於國王"
+"的統治越來越不滿意。由於全力進行一場大戰，國王無法派遣足夠的軍隊來保護邊境。"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:26
@@ -157,7 +149,7 @@ msgstr ""
 msgid ""
 "The people of Annuvin were unwilling to relinquish their hard-earned self-"
 "rule, especially not to this pretender..."
-msgstr "阿寧芬的人民不願放棄他們來之不易的自治權，尤其是交給一位篡位者..."
+msgstr "安紐芬的人民不願放棄他們來之不易的自治權，尤其是交給一位篡位者..."
 
 #. [side]: type=Bandit_Peasant, id=Baldras
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:50
@@ -185,7 +177,7 @@ msgstr "擊敗所有的地精掠奪者"
 #. [objective]: condition=lose
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:111
 msgid "Goblins reach the village of Dallben"
-msgstr "地精抵達島本村"
+msgstr "地精抵達達爾本村"
 
 #. [objective]: condition=lose
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:115
@@ -243,8 +235,8 @@ msgid ""
 "sufficient forces we must look to these villagers to feed our wolves and "
 "slake the thirst of our blades."
 msgstr ""
-"我渴望燒毀整個人類城市，但在大酋長給我們足夠的軍力前，我們得先\"照顧\"這些村"
-"民一下。將他們拿來餵狼，澆熄殺戮的慾望！"
+"我渴望燒毀整個人類城市，但在大酋長給我們足夠的軍力前，我們得先「照顧」這些村"
+"民一下。將他們拿來餵狼，澆熄殺戮的慾望。"
 
 #. [message]: speaker=Fal Khag
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:200
@@ -304,7 +296,7 @@ msgstr "哈魄"
 msgid ""
 "Look, goblin riders approach! You were right, they were going to raid "
 "Dallben while we were gone."
-msgstr "看，地精騎士逼過來了！你是對的，他們想在我們離開時襲擊島本。"
+msgstr "看，地精騎士逼過來了！你是對的，他們想在我們離開時襲擊達爾本。"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:253
@@ -319,7 +311,7 @@ msgid ""
 "That goblin leader is heading full-speed straight for Dallben. But we’ll "
 "need to chase them all down if we’re going to stop them."
 msgstr ""
-"那個地精頭頭正全速往島本前進。如果要阻止他們，我們就得將他們一個一個拖住。"
+"那個地精頭頭正全速往達爾本前進。如果要阻止他們，我們就得將他們一個一個拖住。"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:261
@@ -429,7 +421,7 @@ msgstr "地精騎士又更靠近了。我們絕對不能讓他們進到村子裡
 #. [message]: speaker=Wolmas
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:396
 msgid "Look! Goblin riders are on the hunt — and heading right for Dallben!"
-msgstr "看！地精騎士 - 正朝著島本接近中！"
+msgstr "看！地精騎士 - 正朝著達爾本接近中！"
 
 #. [message]: speaker=Remald
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:400
@@ -531,20 +523,14 @@ msgstr "嘉拉德才是韋諾之王。我們不受皇后統治。"
 
 #. [message]: speaker=Tarwen
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:146
-#, fuzzy
-#| msgid ""
-#| "Insolent peasants, you will kneel before your betters! Asheviere is the "
-#| "queen of Wesnoth. The King fell three weeks ago at Abez. I shall not "
-#| "bandy words with you. Your magistrate will be coming with us, and we do "
-#| "not care if it is dead or alive."
 msgid ""
 "Insolent peasants, you will kneel before your betters! Asheviere is the "
 "Queen of Wesnoth. The King fell three weeks ago at Abez. I shall not bandy "
 "words with you. Your magistrate will be coming with us, and we do not care "
 "if it is dead or alive."
 msgstr ""
-"無禮的鄉下人，你們應該在上位者前跪下！艾絲維爾是韋諾的女王。國王三周前在阿奔"
-"茲駕崩了。少跟我頂嘴。無論活人還是屍體，這裡的村長都得跟我們走。"
+"無禮的鄉下人，你們應該在上位者前跪下！艾絲維爾是韋諾的女王。國王三周前在雅碧"
+"駕崩了。少跟我頂嘴。無論活人還是屍體，這裡的村長都得跟我們走。"
 
 #. [message]: speaker=Tarwen
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:180
@@ -562,7 +548,7 @@ msgid ""
 "I am the magistrate of Dallben, and it is <i>you</i> who will be leaving "
 "Dallben, be it dead or alive."
 msgstr ""
-"我就是島本的村長，該離開島本的是<i>你</i>才對，你想活著離開還是躺著出去。"
+"我就是達爾本的村長，該離開達爾本的是<i>你</i>才對，你想活著離開還是躺著出去。"
 
 #. [message]: speaker=Tarwen
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:213
@@ -584,7 +570,7 @@ msgstr "在王權的統治下我們生活已經夠辛苦了。但現在恐怕更
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:245
 msgid "We must tell the people of Delwyn about this."
-msgstr "我們必須告訴戴爾因的人這些事。"
+msgstr "我們必須告訴戴爾文的人這些事。"
 
 #. [message]: role=Advisor
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:258
@@ -601,7 +587,7 @@ msgid ""
 "lands, but some sinister thing is happening with the ascent of the Queen to "
 "the throne."
 msgstr ""
-"好主意。我們去戴爾因和他們商議這些事。我不相信韋諾會陷入黑暗深淵。現在不只是"
+"好主意。我們去戴爾文和他們商議這些事。我不相信韋諾會陷入黑暗深淵。現在不只是"
 "半獸人威脅我們的土地，還有王后攀上王位後的不祥之兆。"
 
 #. [message]: speaker=Baldras
@@ -621,10 +607,6 @@ msgstr "喔！不！他們的援軍到了，我們沒有時間了..."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:353
-#, fuzzy
-#| msgid ""
-#| "They would be remembered only traitors rightly put down by the Queen’s "
-#| "lances. And in the dark years to come, woe betide any who questioned it."
 msgid ""
 "They would be remembered only as traitors rightly put down by the Queen’s "
 "lances. And in the dark years to come, woe betide any who questioned it."
@@ -645,13 +627,15 @@ msgid ""
 "sent ahead for the magistrate, Relana, to meet them in a secluded strath in "
 "the swamps."
 msgstr ""
+"由於擔心女王的軍隊會在發現巡邏隊後進軍這裡。博岞斯和士兵逃離了達爾本。他們前"
+"往戴爾文並且派人通知了治安官雷爾訥在沼澤中一個隱密的山谷裡見面。"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:22
 msgid ""
 "As morning dawned over the day after next, they found Relana already waiting "
 "for them."
-msgstr ""
+msgstr "第三天的清晨，他們就發現雷爾訥已經在那邊等待他們了。"
 
 #. [side]: type=Highwayman_Peasant, id=Relana
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:49
@@ -689,7 +673,7 @@ msgstr "擊敗兩個敵方領導者"
 #. [objective]: condition=lose
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:146
 msgid "Death of Relana"
-msgstr "雷爾訥死亡"
+msgstr "雷爾訥陣亡"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:180
@@ -698,36 +682,26 @@ msgid ""
 "In your many years as Delwyn’s magistrate I have never known your judgment "
 "to err."
 msgstr ""
-"雷爾訥，我在此感謝您招待我們的信使，並且同意與我們會面。在您擔任戴爾因村長的"
+"雷爾訥，我在此感謝您招待我們的信使，並且同意與我們會面。在您擔任戴爾文村長的"
 "這些年來，我未曾聽說您判斷失誤。"
 
 #. [message]: speaker=Relana
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:184
-#, fuzzy
-#| msgid ""
-#| "It has been a long time, old friend. Your news worries us. Yet, there is "
-#| "no problem we have not worked out here at our secret meeting place."
 msgid ""
 "It has been a long time, old friend. Your news worries us. Yet, there is no "
 "problem we have not worked out together."
 msgstr ""
-"老友，那已經是很久以前的事了。你帶來的消息讓我很苦惱。不用說，這裡不是我們密"
-"談的好地方。"
+"老友，那已經是很久以前的事了。你帶來的消息讓我很苦惱。不過沒有問題，沒有什麼"
+"是我們兩個一起解決不了的。"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:188
-#, fuzzy
-#| msgid ""
-#| "You do not understand. We attacked a Wesnoth army patrol. Not only that, "
-#| "the leader was no man I had ever seen in Annuvin province before. Never "
-#| "has one been sent out here as a patrol captain who was so ruthless and "
-#| "cruel."
 msgid ""
 "You do not understand. We attacked a Wesnoth army patrol. Not only that, the "
 "leader was no man I had ever seen in Annuvin Province before. Never has one "
 "been sent out here as a patrol captain who was so ruthless and cruel."
 msgstr ""
-"你不了解。我們對韋諾巡邏隊進行攻擊。不只這樣，以前從沒有這位長官在阿寧芬省值"
+"你不了解。我們對韋諾巡邏隊進行攻擊。不只這樣，以前從沒有這位長官在安紐芬省值"
 "勤的紀錄。我從沒見過這麼冷酷無情的巡邏隊長。"
 
 #. [message]: speaker=Harper
@@ -736,7 +710,7 @@ msgid ""
 "Had they taken my uncle, they would have surely shown up in Delwyn today "
 "with the same ultimatum. As it is, several riders escaped."
 msgstr ""
-"在他們帶走我的叔叔後， 他們今日肯定也會來戴爾因下達最後通牒。事實上，有幾個騎"
+"在他們帶走我的叔叔後， 他們今日肯定也會來戴爾文下達最後通牒。事實上，有幾個騎"
 "兵溜走了。"
 
 #. [message]: speaker=Relana
@@ -781,10 +755,6 @@ msgstr "我們需要證據。鐵證...等一下，我是不是聽到半獸人的
 
 #. [message]: speaker=Relana
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:220
-#, fuzzy
-#| msgid ""
-#| "I think they are, old friend. And that rank smell on the wind tells "
-#| "another tale; saurians approach. To arms!"
 msgid ""
 "I think they are, old friend. And that rank smell on the wind tells another "
 "tale: saurians approach. To arms!"
@@ -835,8 +805,8 @@ msgid ""
 "Baldras. I must remain here to see to the defense of Delwyn and Dallben, but "
 "you should fly to Elensefar with all speed."
 msgstr ""
-"我想你去和麥達克領主會面的任務變得更急迫了，博岞斯。我必須留在這裡看顧戴爾因"
-"和島本的防禦，但你最好火速趕到艾倫索法。"
+"我想你去和麥達克領主會面的任務變得更急迫了，博岞斯。我必須留在這裡看顧戴爾文"
+"和達爾本的防禦，但你最好火速趕到艾倫索法。"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:280
@@ -955,17 +925,12 @@ msgstr ""
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:207
-#, fuzzy
-#| msgid ""
-#| "What can we do then? We have brought with us many from Annuvin province "
-#| "who are willing to fight, but our families are still at home. They will "
-#| "not last long if the Queen’s patrols return."
 msgid ""
 "What can we do then? We have brought with us many from Annuvin Province who "
 "are willing to fight, but our families are still at home. They will not last "
 "long if the Queen’s patrols return."
 msgstr ""
-"接著，我們該怎麼辦呢？我們從阿寧芬省帶來許多有參戰意願的人，但是我們的家人都"
+"接著，我們該怎麼辦呢？我們從安紐芬省帶來許多有參戰意願的人，但是我們的家人都"
 "還留在家園。如果王后巡邏隊折返的話，他們是抵抗不了多久的。"
 
 #. [message]: speaker=Lord Maddock
@@ -1268,8 +1233,8 @@ msgid ""
 "Dallben. Our mission is unfinished, but we must return to fight a suicide "
 "battle."
 msgstr ""
-"我們在這裡浪費太多時間了。王后的軍隊大概返回島本了。我們的任務沒有完成，但我"
-"們必須回去參與必死的戰鬥。"
+"我們在這裡浪費太多時間了。王后的軍隊大概返回達爾本了。我們的任務沒有完成，但"
+"我們必須回去參與必死的戰鬥。"
 
 #. [scenario]: id=06_The_Grey_Woods
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:4
@@ -1371,12 +1336,6 @@ msgstr ""
 
 #. [message]: speaker=Helicrom
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:253
-#, fuzzy
-#| msgid ""
-#| "Carcyn is always foggy as of late because these woods have recently "
-#| "become home to a lich and two of its underling necromancers. Our "
-#| "experiments may have actually aroused it from sleep... We’re not exactly "
-#| "sure."
 msgid ""
 "Carcyn is always foggy as of late because these woods have recently become "
 "home to a lich and two of its underling necromancers. Our experiments may "
@@ -1653,7 +1612,7 @@ msgid ""
 "patrols have again ventured across the Great River into Annuvin. A woman "
 "named Relana opposed them with a small militia. She was victorious."
 msgstr ""
-"博岞斯大人，有個來自北方的消息。上週，有幾支巡邏隊冒險橫渡大河進入阿寧芬。一"
+"博岞斯大人，有個來自北方的消息。上週，有幾支巡邏隊冒險橫渡大河進入安紐芬。一"
 "個叫雷爾訥的女人成功的用少量的民兵擊退他們。"
 
 #. [message]: speaker=Majel
@@ -1827,13 +1786,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:35
-#, fuzzy
-#| msgid ""
-#| "This sentinel of the western plains stood watch as Wesnoth prospered for "
-#| "many centuries under the protection it provided. No war has overcome it, "
-#| "and its walls have never been overrun. The blood of invaders stains its "
-#| "parapets and the bones of the defeated crumble at the base of Halstead’s "
-#| "frozen waves of stone."
 msgid ""
 "This sentinel of the western plains stood watch as Wesnoth prospered for "
 "many centuries under its protection. No war has overcome it, and its walls "
@@ -1953,11 +1905,6 @@ msgstr "你怎麼知道的？"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:402
-#, fuzzy
-#| msgid ""
-#| "When I was a boy, my father — your grandfather — brought your dad and me "
-#| "to live in Aldril after orcs massacred many in our village. We grew up "
-#| "around here, and we learned many things."
 msgid ""
 "When I was a boy, my father — your grandfather — brought your mother and me "
 "to live in Aldril after orcs massacred many in our village. We grew up "
@@ -2048,7 +1995,7 @@ msgstr ""
 msgid ""
 "Baldras, Gwydion is Lord Maddock’s son. This battle isn’t just about Annuvin "
 "anymore."
-msgstr "博岞斯，葛外迪恩是麥達克領主的兒子。看來這場戰鬥不僅僅只跟阿寧芬有關。"
+msgstr "博岞斯，葛外迪恩是麥達克領主的兒子。看來這場戰鬥不僅僅只跟安紐芬有關。"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:542
@@ -2115,18 +2062,13 @@ msgstr "任何在堡壘內的人都無法活著出來。"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:811
-#, fuzzy
-#| msgid ""
-#| "After more than a week of fierce fighting, the main body of Asheviere’s "
-#| "host arrived from Weldyn. The battle was soon finished. Every last man "
-#| "from the province of Annuvin was executed."
 msgid ""
 "After more than a week of fierce fighting, the main body of Asheviere’s host "
 "arrived from Weldyn. The battle was soon finished. Every last man from the "
 "Province of Annuvin was executed."
 msgstr ""
 "在超過一個禮拜的激烈戰鬥後，艾絲維爾麾下的主力部隊自維丁抵達。戰鬥很快就結束"
-"了。阿寧芬省的倖存者都被處死。"
+"了。安紐芬省的倖存者都被處死。"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:841
@@ -2249,19 +2191,13 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/09_Epilogue.cfg:20
-#, fuzzy
-#| msgid ""
-#| "The Elense riders routed the orcish army, small as it was, and sent them "
-#| "back across the Great River. They then scattered to the countryside and "
-#| "were not heard from again. Baldras thought this odd behavior when he "
-#| "heard about it."
 msgid ""
 "The Elense riders routed the orcish army, small as it was, and sent them "
 "back across the Great River. They then scattered to the countryside and were "
 "not heard from again. Baldras thought this behavior odd when he heard about "
 "it."
 msgstr ""
-"艾琳斯的騎士給半獸人小股軍隊引路，並將他們送回大河的對岸。接著，他們各奔東"
+"艾琳斯的騎士擊潰了半獸人的小部隊，並將他們逼退到大河的對岸。接著，他們各奔東"
 "西，再也沒任何關於他們的消息。博岞斯聽到這消息時覺得非常奇怪。"
 
 #. [part]
@@ -2308,8 +2244,8 @@ msgid ""
 "ground. In a panic, they raced through the forest to Delwyn. It was likewise "
 "devastated. However, they did find one clue as to what happened..."
 msgstr ""
-"這群官逼民反的人們最後回到島本。這裡已經被燒為平地。驚恐的穿過森林去看戴爾因"
-"的狀況，發現它同樣也被毀了。然而，他們發現了一條線索..."
+"這群官逼民反的人們最後回到達爾本。這裡已經被燒為平地。驚恐的穿過森林去看戴爾"
+"文的狀況，發現它同樣也被毀了。然而，他們發現了一條線索..."
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/09_Epilogue.cfg:36
@@ -2381,14 +2317,6 @@ msgstr "流浪法師"
 
 #. [unit_type]: id=Rogue Mage, race=human
 #: data/campaigns/Liberty/units/Rogue_Mage.cfg:17
-#, fuzzy
-#| msgid ""
-#| "Some mages are thrown out of the mage’s guild for attempting to practice "
-#| "forbidden arts. Now completely outside the law, these rogue mages do "
-#| "whatever necessary to support their study of black magic. Although not as "
-#| "skilled as mages with more formal training, their magic can be quite "
-#| "lethal, while their banditry has resulted in moderate skill with the "
-#| "short sword."
 msgid ""
 "Some mages are thrown out of the mages’ guild for attempting to practice "
 "forbidden arts. Now completely outside the law, these rogue mages do "
