--- a/po/wesnoth-trow/zh_TW.po
+++ b/po/wesnoth-trow/zh_TW.po
@@ -9,14 +9,14 @@ msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2019-03-09 20:42+0800\n"
-"Last-Translator: Li, Kwunron <likwueron>\n"
+"PO-Revision-Date: 2019-03-28 16:51+0800\n"
+"Last-Translator: 楊綮銘 <steven2880@gmail.com>\n"
 "Language-Team: Wesnoth Traditional Chinese Team\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.7\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [scenario]: id=22_The_Rise_of_Wesnoth
 #. [campaign]: id=The_Rise_of_Wesnoth
@@ -74,10 +74,8 @@ msgstr ""
 
 #. [campaign]: id=The_Rise_of_Wesnoth
 #: data/campaigns/The_Rise_Of_Wesnoth/_main.cfg:26
-#, fuzzy
-#| msgid "(Expert level, 24 scenarios.)"
 msgid "(Hard level, 24 scenarios.)"
-msgstr "（專家等級，24個章節）"
+msgstr "（困難等級，24個章節。）"
 
 #. [about]
 #: data/campaigns/The_Rise_Of_Wesnoth/_main.cfg:29
@@ -314,10 +312,6 @@ msgstr "動亂終於波及到了島中央，這裡是與世隔絕的國王埃達
 
 #. [message]: speaker=King Eldaric IV
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/01_A_Summer_of_Storms.cfg:153
-#, fuzzy
-#| msgid ""
-#| "It looks like a Wesfolk rabble have seized the Northern Keep! Prepare for "
-#| "battle, Haldric!"
 msgid ""
 "It looks like some Wesfolk rabble have seized the Northern Keep! Prepare for "
 "battle, Haldric!"
@@ -456,11 +450,8 @@ msgstr "我們必須做好防守準備！海德里克，待在要塞。我要去
 
 #. [message]: speaker=unit
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/01_A_Summer_of_Storms.cfg:254
-#, fuzzy
-#| msgid ""
-#| "My forces are defeated, under your customs of surrender I will go now."
 msgid "My forces are defeated. Under your customs of surrender, I will go now."
-msgstr "我的部隊被打敗了，按照你們對待投降者的慣例，我要走了。"
+msgstr "我的部隊被打敗了，按照你們對待投降者的慣例，我現在要走了。"
 
 #. [message]: speaker=King Eldaric IV
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/01_A_Summer_of_Storms.cfg:258
@@ -647,7 +638,7 @@ msgstr "嗯，我要求按照投降者來對..."
 #. [message]: speaker=King Eldaric IV
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/02_The_Fall.cfg:275
 msgid "Nay! Off with your hea—"
-msgstr "不! 推出去砍───"
+msgstr "不! 推出去砍—"
 
 #. [message]: speaker=unit
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/02_The_Fall.cfg:280
@@ -674,8 +665,6 @@ msgstr "我想你們的能力會有用的。你可以加入我們。"
 
 #. [message]: speaker=Wesfolk Leader
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/02_The_Fall.cfg:298
-#, fuzzy
-#| msgid "Let there be peace between us, our survival depends on it."
 msgid "Let there be peace between us. Our survival depends on it."
 msgstr "讓我們講和吧，我們的生存有賴於此。"
 
@@ -867,8 +856,6 @@ msgstr "你最好別再多愁善感了。拿起你的劍，前面還有足夠多
 
 #. [message]: speaker=Tan-Schmog
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/03_A_Harrowing_Escape.cfg:147
-#, fuzzy
-#| msgid "You won’t get much further boy. Grrrr!"
 msgid "You won’t get much further, boy. Grrrr!"
 msgstr "你沒辦法再往前進了，小子。嘎嘎嘎！"
 
@@ -1626,8 +1613,6 @@ msgstr ""
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/05_The_Oldwood.cfg:239
-#, fuzzy
-#| msgid "We will help. "
 msgid "We will help."
 msgstr "我們會幫忙的。"
 
@@ -4995,10 +4980,6 @@ msgstr "有人確切知道巨魔的情況嗎？"
 
 #. [message]: speaker=Burin the Lost
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/17c_Troll_Hole.cfg:272
-#, fuzzy
-#| msgid ""
-#| "I indeed do. They are green, and mean, and will try to crush you like a "
-#| "bug. They heal very quickly."
 msgid ""
 "I indeed do. They are ugly and mean, and will try to crush you like a bug. "
 "They heal very quickly."
@@ -6666,11 +6647,6 @@ msgstr "貴族戰士"
 
 #. [unit_type]: id=Noble Fighter, race=human
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Noble_Fighter.cfg:18
-#, fuzzy
-#| msgid ""
-#| "Young and brash, Fighters fight with a sword, and are vulnerable to "
-#| "ranged attacks from enemies. However they have the potential to become "
-#| "great Commanders one day."
 msgid ""
 "Young and brash, Fighters fight with a sword, and are vulnerable to ranged "
 "attacks from enemies. However, they have the potential to become great "
