--- a/po/wesnoth-tb/zh_TW.po
+++ b/po/wesnoth-tb/zh_TW.po
@@ -1,5 +1,5 @@
 # The Battle for Wesnoth - Traditional Chinese Translations
-# Copyright (C) 2005-2018 Wesnoth development team
+# Copyright (C) 2005-2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 # 李昆融 <likwueron@gmail.com>, 2018.
 #
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: wesnoth-1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2018-08-04 22:26+0800\n"
+"PO-Revision-Date: 2019-03-28 20:27+0800\n"
 "Last-Translator: 楊綮銘 <steven2880@gmail.com>\n"
 "Language-Team: Wesnoth Traditional Chinese Team\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:13
@@ -61,10 +61,8 @@ msgstr ""
 
 #. [campaign]: id=Two_Brothers
 #: data/campaigns/Two_Brothers/_main.cfg:23
-#, fuzzy
-#| msgid "(Novice level, 4 scenarios.)"
 msgid "(Rookie level, 4 scenarios.)"
-msgstr "（初學者等級，4個章節）"
+msgstr "（初學者等級，4個章節。）"
 
 #. [about]
 #: data/campaigns/Two_Brothers/_main.cfg:30
@@ -561,12 +559,12 @@ msgstr "來吧，各位，在可親的綠林中漫步，有什麼比這更好的
 #. [message]: speaker=Nil-Galion
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:380
 msgid "You there! Halt and explain yourself."
-msgstr "喂！站住，你是誰！"
+msgstr "那裡的那個！報上名來。"
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:385
 msgid "We’re chasing after some men who kidnapped my brother!"
-msgstr "我們正在追蹤一些綁架我兄弟的人。"
+msgstr "我們正在追蹤一些綁架我兄弟的人！"
 
 #. [message]: speaker=Nil-Galion
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:390
@@ -610,10 +608,6 @@ msgstr "我看到了，他們在那！"
 
 #. [message]: speaker=Muff Toras
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:440
-#, fuzzy
-#| msgid ""
-#| "Curses! If they had been an hour slower our master’s reinforcements would "
-#| "already be here to meet us."
 msgid ""
 "Curses! If they had been an hour slower, our master’s reinforcements would "
 "already be here to meet us."
@@ -797,7 +791,7 @@ msgid ""
 "of their armies."
 msgstr ""
 "你們這些愚蠢的人類，你們殺得死我但追不上亡靈。我已完成我的儀式，將會很快地重"
-"生成為不死大軍的主宰!"
+"生成為不死大軍的主宰。"
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/02_The_Chase.cfg:640
@@ -910,12 +904,12 @@ msgstr "城堡衛兵"
 #. [time]: id=indoors_dark_castle
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:235
 msgid "Indoors (dark castle)"
-msgstr ""
+msgstr "室內（黑城堡）"
 
 #. [time]: id=indoors_dark_castle_lit
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:250
 msgid "Indoors (lit)"
-msgstr ""
+msgstr "室內（亮）"
 
 #. [objective]: condition=win
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:306
@@ -1019,10 +1013,6 @@ msgstr "錯了！去死吧！"
 
 #. [message]: speaker=Knago-Brek
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:492
-#, fuzzy
-#| msgid ""
-#| "Haha! We not kill people for long time. Weapon wants blood. We now kill "
-#| "humans!!"
 msgid ""
 "Haha! We not kill people for long time. Weapon wants blood. We now kill "
 "humans!"
@@ -1030,10 +1020,6 @@ msgstr "哈哈！我們很久沒有殺人了。刀劍需要飲血，我們要殺
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:497
-#, fuzzy
-#| msgid ""
-#| "My sword-arm has a say in who will do the dying. Come on, men, let’s kill "
-#| "some orcs."
 msgid ""
 "My sword-arm shall have a say in who will do the dying. Come on, men, let’s "
 "kill some orcs."
@@ -1136,12 +1122,12 @@ msgstr "這一定是他們關押比昂的牢房鑰匙！鑰匙給我，我等不
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:746
 msgid "It may be important, I best take it."
-msgstr ""
+msgstr "這可能很重要，我最好拿走它。"
 
 #. [message]: speaker=unit
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:764
 msgid "This castle seems as dark as a cave!"
-msgstr ""
+msgstr "這個城堡看起來像個黑暗的洞穴！"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:770
@@ -1150,6 +1136,8 @@ msgid ""
 "permanent night). Place your units carefully, as your troops will be weaker "
 "and enemy units stronger."
 msgstr ""
+"這個城堡處於在一個<i>混沌</i>時段（相當於永夜）。小心部屬您的單位，因為您的單"
+"位會變弱而敵人的單位會變強。"
 
 #. [message]: speaker=unit
 #: data/campaigns/Two_Brothers/scenarios/03_Guarded_Castle.cfg:790
@@ -1458,7 +1446,7 @@ msgstr "你可以使用康瑟若．荷邦的主堡招幕或招回額外單位。
 #. [message]: speaker=Tairach
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:341
 msgid "Today, you shall pay for disfiguring my face, mage!"
-msgstr ""
+msgstr "今天，你應該為我的臉付出代價，法師！"
 
 #. [message]: speaker=Baran
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:346
@@ -1466,6 +1454,8 @@ msgid ""
 "I have already paid with the lives of my men at Toen Caric. It is time I "
 "righted that mistake and finished this once and for all."
 msgstr ""
+"我在托恩．卡里克的日子就已經付出了代價。該是我要彌補這個錯誤並且終結這一切的"
+"時候了。"
 
 #. [message]: speaker=Arvith
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:355
@@ -1499,12 +1489,12 @@ msgstr "我不覺得我們能從這裡救到什麼人了，太遲了。"
 #. [message]: speaker=Baran
 #: data/campaigns/Two_Brothers/scenarios/04_Return_to_the_Village.cfg:388
 msgid "I was too weak to protect these people. Oh, why did this happen to me?!"
-msgstr "我無法保護我的人民。噢！為什麼這要發生在我身上？！？"
+msgstr "我無法保護我的人民。噢！為什麼這要發生在我身上？！"
 
 #. [scenario]: id=05_Epilogue
 #: data/campaigns/Two_Brothers/scenarios/05_Epilogue.cfg:5
 msgid "A Tale of Two Brothers — Epilogue"
-msgstr "救援計畫——尾聲"
+msgstr "救援計畫 — 尾聲"
 
 #. [part]
 #: data/campaigns/Two_Brothers/scenarios/05_Epilogue.cfg:18
