--- a/po/wesnoth-thot/zh_TW.po
+++ b/po/wesnoth-thot/zh_TW.po
@@ -1,17 +1,21 @@
-# , 2009.
+# The Battle for Wesnoth - Traditional Chinese Translations
+# Copyright (C) 2005-2019 Wesnoth development team
+# This file is distributed under the same license as the Battle for Wesnoth package.
+# 李昆融 <likwueron@gmail.com>, 2009.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: Battle for Wesnoth 1.3.12+dev\n"
+"Project-Id-Version: wesnoth-1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2018-11-03 18:04+0800\n"
-"Last-Translator: Li, Kwunron <likwueron>\n"
-"Language-Team: Chinese Traditional <steven2880@gmail.com>\n"
-"Language: \n"
+"PO-Revision-Date: 2019-03-28 20:38+0800\n"
+"Last-Translator: 楊綮銘 <steven2880@gmail.com>\n"
+"Language-Team: Wesnoth Traditional Chinese Team\n"
+"Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.7\n"
+"X-Generator: Poedit 2.2.1\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. [campaign]: id=The_Hammer_of_Thursagan
@@ -71,7 +75,7 @@ msgstr ""
 #. [campaign]: id=The_Hammer_of_Thursagan
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:26
 msgid "(Intermediate level, 11 scenarios.)"
-msgstr "（中等難度，11個場㬌。）"
+msgstr "（中等等級，11個章節。）"
 
 #. [about]
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:29
@@ -705,7 +709,7 @@ msgstr "丹-阿瑟卡"
 #. [side]
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/05_Invaders.cfg:155
 msgid "Villagers"
-msgstr ""
+msgstr "村民"
 
 #. [label]
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/05_Invaders.cfg:168
@@ -715,10 +719,8 @@ msgstr "荒廢要塞"
 #. [objective]: condition=win
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/05_Invaders.cfg:177
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/10_The_Siege_of_Kal_Kartha.cfg:219
-#, fuzzy
-#| msgid "Defeat the Masked Dwarf"
 msgid "Defeat the orcish leaders"
-msgstr "擊敗蒙面矮人"
+msgstr "擊敗半獸人指揮官"
 
 #. [message]: speaker=Aiglondur
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/05_Invaders.cfg:226
@@ -1005,37 +1007,25 @@ msgstr "這群拿斧頭的傢伙別想接近我們的幼龍。攻擊！"
 
 #. [message]: speaker=Master Perrin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:198
-#, fuzzy
-#| msgid ""
-#| "We’re grateful for your assistance. And I’d like to send a couple of our "
-#| "senior apprentices with you to the east. It has come time for them to be "
-#| "journeymen... and I sense something being born to the east that I do not "
-#| "like the feel of."
 msgid ""
 "We’re grateful for your assistance. Moreover, I’d like to send a couple of "
 "our senior apprentices with you to the east. It has come time for them to be "
 "journeymen... and I sense something being born to the east that I do not "
 "like the feel of."
 msgstr ""
-"我們感激你們的援助。我會派一對年長的學徒跟你們向東去。該是讓他們出去雲遊的時"
-"候了...而且，我感到東方出現了我不喜的東西。"
+"我們感激你們的援助。我會派幾位年長的學徒跟你們向東去。該是讓他們出去雲遊的時"
+"候了...而且，我感覺到東方出現了我不喜歡的東西。"
 
 #. [message]: speaker=Master Perrin
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:203
-#, fuzzy
-#| msgid ""
-#| "We’re grateful for your assistance. And I’d like to send one of our "
-#| "senior apprentices with you to the east. It has come time for him to be a "
-#| "journeyman... and I sense something being born to the east that I do not "
-#| "like the feel of."
 msgid ""
 "We’re grateful for your assistance. Moreover, I’d like to send one of our "
 "senior apprentices with you to the east. It has come time for him to be a "
 "journeyman... and I sense something being born to the east that I do not "
 "like the feel of."
 msgstr ""
-"我們感激你們的援助。我會派至少一位年長的學徒跟你們向東去。該是讓他出去雲遊的"
-"時候了...而且，我感到東方出現了我不喜的東西。"
+"我們感激你們的援助。我會派一位年長的學徒跟你們向東去。該是讓他出去雲遊的時候"
+"了...而且，我感覺到東方出現了我不喜歡的東西。"
 
 #. [unit]: type=Mage, id=Lorinne
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/07_Mages_and_Drakes.cfg:212
@@ -1329,10 +1319,6 @@ msgstr "鞭子。手銬。不，阿根廷，即使我會懷疑一位智慧大師
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/08_Fear.cfg:372
-#, fuzzy
-#| msgid ""
-#| "They were seeking captives. To what purpose, I cannot say. But I doubt it "
-#| "was any good one."
 msgid ""
 "They were seeking captives. To what purpose, I cannot say, but I doubt it "
 "was any good one."
@@ -1759,15 +1745,11 @@ msgstr "地底"
 
 #. [objective]: condition=win
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:212
-#, fuzzy
-#| msgid "Defeat Karrag"
 msgid "Find and defeat Karrag"
-msgstr "擊敗葛瑞格"
+msgstr "尋找並且擊敗葛瑞格"
 
 #. [message]: speaker=Angarthing
 #: data/campaigns/The_Hammer_of_Thursagan/scenarios/12_The_Underlevels.cfg:280
-#, fuzzy
-#| msgid "This place smells of death."
 msgid "This place reeks of death."
 msgstr "這地方有聞起來有死亡的氣息。"
 
