--- a/po/wesnoth-units/zh_TW.po
+++ b/po/wesnoth-units/zh_TW.po
@@ -1,16 +1,17 @@
-# Copyright (C) 2005 Wesnoth development team
+# The Battle for Wesnoth - Traditional Chinese Translations
+# Copyright (C) 2005-2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
-# 楊綮銘 <steven2880@gmail.com>, 2005.
-# Li, Kwunron <likwueron>, 2018.
+# 楊綮銘 <steven2880@gmail.com>, 2008.
+# 李昆融 <likwueron@gmail.com>, 2018.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: wesnoth\n"
+"Project-Id-Version: wesnoth-1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
 "PO-Revision-Date: 2019-03-13 18:41+0800\n"
 "Last-Translator: 楊綮銘 <steven2880@gmail.com>\n"
-"Language-Team: Chinese/Simplified <steven2880@gmail.com>\n"
+"Language-Team: Wesnoth Traditional Chinese Team\n"
 "Language: zh_TW\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
